Solved issues of incorrect image creation after resize (didn't update new size); Solved issue of y-Axis domain not showing dates correctly; Solved management of multiple parameters adapting the y-axis to show all; Style change to selection to remove selection shadow which did not look good;

--- a/app/styles/sumoselect.scss
+++ b/app/styles/sumoselect.scss
@@ -1,5 +1,5 @@
 ﻿
-.SumoSelect {font-size: 0.8em}
+.SumoSelect {font-size: 0.8em; outline: none!important;}
 
 .SumoSelect p {margin: 0}
 
